--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h1>Meu primeiro Git</h1>
     <h2>Adicionando alterações</h2>
+    <h3>Mais testes com alterações</h3>
     
 </body>
 </html>
