--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Meu primeiro Git</h1>
     <h2>Adicionando alterações</h2>
     <p>Inserindo um parágrafo</p>
+    <p>Inserindo um segundo parágrafo</p>
     
 </body>
 </html>
